--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 description = "Simple logger, write log into anywhere."
 
+[features]
+default = ["colors"]
+colors = ["colored"]
+
 [dependencies]
+colored = { version = "2.0", optional = true }
 log = { version = "0.4", features = ["std"] }
